add favorite id
